Add place duration + split by days